Fix the equalbtn to align

--- a/css/index.css
+++ b/css/index.css
@@ -265,7 +265,6 @@ body {
 
 .btn-reset {
   margin: 12px 16px;
-  margin-top: 2%;
   background-color: var(--reset-background-color);
   color: var(--neutral-color);
   box-shadow: 0 5px var(--reset-boxshadow);
